welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value asmille
  if (asmille==true &&  bsmile== true)||(asmile== false && bsmile== false){
      ^monkeyTrouble:2: error: not found: value bsmile
  if (asmille==true &&  bsmile== true)||(asmile== false && bsmile== false){
                        ^monkeyTrouble:2: error: not found: value ||
  if (asmille==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                      ^monkeyTrouble:2: error: not found: value asmile
  if (asmille==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                         ^monkeyTrouble:2: error: not found: value bsmile
  if (asmille==true &&  bsmile== true)||(asmile== false && bsmile== false){
                                                           ^